# python-project-poc

./: .flake8  .gitignore  .isort.cfg  Dockerfile.dev  Makefile  Pipfile  README.md  app.cfg.dev  docker-compose.dev.yml  pyproject.toml  run.py  setup.cfg  test_project.py
docker/: Dockerfile.dev  dev.env  docker-compose.dev.yml
test_proj/: __init__.py  example.py
tests/: test_project.py
