[tool.poetry]
name = "test-proj"
version = "0.1.0"
description = ""
authors = ["Giancarlo Fusiello"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.6"
requests = "=2.4.3"
flask = "=0.12.4"

[tool.poetry.dev-dependencies]
pytest = "=3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
