[tool.poetry]
name = "test-proj"
version = "0.1.0"
description = ""
authors = ["Giancarlo Fusiello"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.6"
requests = "=2.4.3"
flask = "=1.0.2"

[tool.poetry.dev-dependencies]
pytest = "=4.1.1"
ipdb = "^0.11.0"
flake8 = "^3.6"
flake8-isort = "^2.6"
pylint = "^2.2"
mypy = "^0.650.0"
pytest-watch = "=4.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
